# Dev-Flex-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dev_flex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: main.py
src/collectors/: __init__.py  git.py  hardware.py  network.py  project.py  system.py  tools.py
src/ui/: __init__.py  layout.py  panels.py  themes.py
